# phonproj

./: .gitignore  CLAUDE.md  EXAMPLE_README.md  FORCE_CONSTANT_SYMMETRIZATION.md  IMPLEMENTATION_SUMMARY.md  IRREPS_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  SPACE_GROUP_SYMMETRIZATION.md  SYMPREC_PARAMETER.md  TEST_OPTIMIZATION_SUMMARY.md  debug_phase_scan.py  example_mode_summary_and_thermal.py  find_atom_4909.py  log  plan.md  pyproject.toml  step10_full_output.txt  test_disp.vasp  test_disp2.vasp  test_disp_simple.vasp  test_fixed_function.py  test_isodistort_output.txt  test_isodistort_parser.py  test_mode_summary.py  test_output.vasp  test_output2.vasp  test_output2_fixed.vasp  test_output_simple_fixed.vasp  test_phase_scan_fix.py  test_ref_simple.vasp  test_reference_2x2x2.vasp  test_temperature_modes.py
.serena/: project.yml
agent_files/: README.md
core/: structure_analysis.py  supercell.py
data/: .gitignore
debugs/: analyze_phonopy_convention.py  compare_methods.py  debug_16x1x1_orthogonality.py  debug_2x2x2_case.py  debug_3x3x3_zone_folding.py  debug_atom_alignment.py  debug_displacement_norms.py  debug_mass_bug_theory.py  debug_mass_consistency.py  debug_mass_weighting_fix.py  debug_mode_orthonormality.py  debug_normalization_issue.py  debug_normalization_issue2.py  debug_normalization_issue3.py  debug_normalization_issue4.py  debug_normalization_issue5.py  debug_orthonormality.py  debug_phonon_orthonormality.py  debug_projection_norms.py  debug_simple_mass_weighting.py  debug_single_mode_projection.py  debug_specific_overlap.py  debug_structure_alignment.py  debug_supercell_determinism.py  demo_projection_table.py  demonstrate_commensurability.py  investigate_completeness.py  supercell_comparison_table.py  test_2x2x2_orthonormality_corrected.py  test_3x3x3_orthonormality.py  test_completeness_comparison.py
docs/: decompose.md  displacement_generator.md  eqn.md  supercell_completeness_methodology.md
examples/: eigendisplacement_analysis_example.py  eigenvector_analysis_example.py  eigenvector_projection_example.py  enhanced_mapping_example.py  isodistort.py  isodistort_example.py  phonon_band_structure_simple_example.py  phonon_displacement_generator_example.py  step10_yajun_analysis.py  step8_cross_supercell_projection.py  test_generator_supercell.sh
isodistort_output/: parent.vasp
openspec/: AGENTS.md  project.md
phonproj/: .modes.py.swp  SLURM_JOBS_README.md  TmFeO3_phonon.txt  __init__.py  band_structure.py  cli.py  example_mode_summary_and_thermal.py  irreps_anaddb.py  isodistort_parser.py  map_structure.py  modes.py  run_1.sh  run_SCF_finvalence_T300_plus_1.py  run_mode_calculation.py  submit_mode_jobs.sh  thermal_displacement.py
refs/: phonon_utils.py  structure_analysis.py
structures/: vasp_mode10+.vasp  vasp_mode10-.vasp  vasp_mode10.vasp  vasp_mode11+.vasp  vasp_mode11-.vasp  vasp_mode11.vasp  vasp_mode12+.vasp  vasp_mode12-.vasp  vasp_mode13+.vasp  vasp_mode13-.vasp  vasp_mode14+.vasp  vasp_mode14-.vasp  vasp_mode15+.vasp  vasp_mode15-.vasp  vasp_mode16+.vasp  vasp_mode16-.vasp  vasp_mode16.vasp  vasp_mode17+.vasp  vasp_mode17-.vasp  vasp_mode17.vasp  vasp_mode18+.vasp  vasp_mode18-.vasp  vasp_mode18.vasp  vasp_mode19+.vasp  vasp_mode19-.vasp  vasp_mode2.vasp  vasp_mode20+.vasp  vasp_mode20-.vasp  vasp_mode21+.vasp  vasp_mode21-.vasp  vasp_mode22+.vasp  vasp_mode22-.vasp  (+108 more)
(+653 files in other folders)
